Change project to Clean Architecture
