# internals/deliveries/petition_routes/petition_routes.go
@@ -1,8 +1,8 @@
 package petition_routes
 
 import (
-	"VoteGolang/internals/utils"
-	"VoteGolang/pkg/domain"
+	http2 "VoteGolang/internals/deliveries/http"
+	"VoteGolang/internals/domain"
 	"log"
 	"net/http"
 )
@@ -10,9 +10,9 @@ import (
 func RegisterPetitionRoutes(mux *http.ServeMux, handler *PetitionHandler, tokenManager domain.TokenManager) {
 	logRequest := func(route string, handlerFunc http.HandlerFunc) http.HandlerFunc {
 		return func(w http.ResponseWriter, r *http.Request) {
-			token, err := utils.ExtractTokenFromRequest(r)
+			token, err := http2.ExtractTokenFromRequest(r)
 			if err != nil {
-				log.Printf("Failed to extract token: %v", err)
+				log.Printf("Failed to extract tokens: %v", err)
 			} else {
 				log.Printf("Accessing %s route | Method: %s | URL: %s | Token: %s", route, r.Method, r.URL.Path, token)
 			}
@@ -21,26 +21,26 @@ func RegisterPetitionRoutes(mux *http.ServeMux, handler *PetitionHandler, tokenM
 		}
 	}
 
-	mux.Handle("/petition/create", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/create", handler.CreatePetition),
+	mux.Handle("/petition/create", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/create", handler.CreatePetition),
 	))
 
-	mux.Handle("/petition/all", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/all", handler.GetAllPetitions),
+	mux.Handle("/petition/all", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/all", handler.GetAllPetitions),
 	))
-	mux.Handle("/petition/all/", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/all_by_page", handler.GetPetitionsByPage),
-	))
-
-	mux.Handle("/petition/get", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/get", handler.GetPetitionByID),
+	mux.Handle("/petition/all/", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/all_by_page", handler.GetPetitionsByPage),
 	))
 
-	mux.Handle("/petition/vote", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/petition_data", handler.Vote),
+	mux.Handle("/petition/get", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/get", handler.GetPetitionByID),
 	))
 
-	mux.Handle("/petition/delete", utils.JWTMiddleware(tokenManager)(
-		logRequest("/petition_data/petition_repository/delete", handler.DeletePetition),
+	mux.Handle("/petition/vote", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/petition", handler.Vote),
+	))
+
+	mux.Handle("/petition/delete", http2.JWTMiddleware(tokenManager)(
+		logRequest("/petition/petition_repository/delete", handler.DeletePetition),
 	))
 }
